--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,7 +95,7 @@
     <!-- Repeat for other records -->
     <div class="col-md-3">
       <!-- Wrap the card in an anchor tag to make it clickable -->
-      <a href="item.html" class="card-link text-decoration-none">
+      <a href="/item" class="card-link text-decoration-none">
         <div class="card h-100">
           <img src="images/Alleyezonme.jpeg" class="card-img-top" alt="Record Image">
           <div class="card-body">
